--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.5.0",
+    "react-bootstrap": "^1.6.6",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
