--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.6",
     "react-dom": "^17.0.2",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -37,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "rules": {
+    "prefer-for-of": false
   }
 }
