--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-       "start": "nodemon app.js"
+    "start": "nodemon app.js"
   },
   "author": "yandys03",
   "license": "ISC",
@@ -15,8 +15,10 @@
     "body-parser": "^1.20.1",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
+    "mongoose": "^5.10.9",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "to": "^0.2.9",
